<resources>
    <string name="app_name">Login Firebase mqtt controlLed DHT11</string>

    <string name="nav_home">Home</string>
    <string name="nav_taikhoan">Tài khoản</string>
    <string name="nav_themtaikhoan">Thêm tài khoản</string>
    <string name="nav_doimatkhau">Đổi mật khẩu</string>
    <string name="nav_dangxuat">Đăng xuất</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
</resources>